# axum-test-server

./: Cargo.toml  README.md
.github/workflows/: rust-basic.yml
migrations/: 20230717123209_create_todos_table.sql  20230719061818_forward-table-raw.sql  20230727182847_3-part-data-(accounts,recipients,messages).sql  20230731173900_add_uniqueness_to_pubkey_feild.sql  20230810132416_3-part-data-(accounts,_recipients,_messages).sql
src/: didcomm_types.rs  lib.rs  main.rs  router.rs  server.rs  storage.rs
src/database/: any.rs  mod.rs  mysql.rs  postgres.rs
src/routes/: coordination.rs  forward.rs  hello_world.rs  json.rs  mod.rs  pickup.rs
src/storage/: mod.rs
src/storage/database/: any.rs  mod.rs  mysql.rs  postgres.rs
tests/: e2e-hello-test.rs  e2e-persistence.rs  e2e-pickup.rs
