[package]
name = "xum-test-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mysql_db"]
postgres_db=["sqlx/postgres"]
mysql_db=["sqlx/mysql"]
any_db=["sqlx/all-databases"]

[dependencies]
async-trait = "0.1.72"
axum = "0.6.18"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio"], optional = true }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
axum-macros = "0.3.8"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
